# cpp-ogl-test

./: CMakeLists.txt  README.md
res/shaders/: texture.frag  texture.vert
src/: global.cpp  global.h  main.cpp
src/math/: noise.cpp  noise.h
src/rendering/: GLHelper.h  IndexArray.cpp  IndexArray.h  Mesh.cpp  Mesh.h  VertexArray.cpp  VertexArray.h  includes.h
src/rendering/camera/: Camera.cpp  Camera.h
src/rendering/renderer/: FPSCounterRenderer.cpp  FPSCounterRenderer.h  GameRenderer.cpp  GameRenderer.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h
src/rendering/shader/: Shader.cpp  Shader.h  Uniform.h
src/world/: World.cpp  World.h
src/world/block/: blocks.h
src/world/chunk/: Chunk.cpp  Chunk.h
